Cambios en routes, component auth.service register y creacion del componente verificar-email

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-navbar></app-navbar>
-<router-outlet />
-<app-footer></app-footer>
+<div class="grid min-h-[100dvh] grid-rows-[auto_auto_1fr_auto]">
+    <app-navbar />
+    <router-outlet />
+    <app-footer />
+</div>
