--- a/src/app/features/auth/login/login.component.css
+++ b/src/app/features/auth/login/login.component.css
@@ -21,6 +21,7 @@
     0 0 100px rgb(68, 121, 216);
 }
 
+/* Boton Gris */
 .shadow__btn__alt {
   padding: 10px 20px;
   border: none;
@@ -76,7 +77,7 @@
   background-color: transparent;
 }
 
-.inputGroup :is(input:focus, input:valid)~label {
+.inputGroup :is(input:focus, input:valid, input:-webkit-autofill)~label {
   transform: translateY(-50%) scale(.9);
   margin: 0em;
   margin-left: 1.3em;
@@ -87,3 +88,9 @@
 .inputGroup :is(input:focus, input:valid) {
   border-color: #4378d9;
 }
+
+/* estilo para cuando se usa el autocompletado */
+.inputGroup input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px #ffffff inset !important;
+}
+
