--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -9,11 +9,11 @@
           <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-4 md:space-y-6">
             <!-- EMAIL -->
             <div class="inputGroup">
-              <input type="email" name="email" formControlName="email" id="email" required>
+              <input name="email" formControlName="email" id="email" required>
               <label for="email">Correo Electrónico</label>
             </div>
             <!-- PASSWORD -->
-            <div class="inputGroup">
+            <div class="inputGroup mt-2">
               <input type="password" name="password" formControlName="password" id="password" required>
               <label for="password">Contraseña</label>
             </div>
@@ -22,7 +22,7 @@
               <a href="#" class="text-sm font-medium text-blue-400 hover:underline ">¿Olvidaste tu contraseña?</a>
             </div>
 
-            <button type="submit" [disabled]="isSubmitting" class="shadow__btn w-full text-black font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+            <button type="submit" [disabled]="loginForm.invalid" class="shadow__btn w-full text-black font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-50 disabled:cursor-not-allowed">
               <div *ngIf="isSubmitting; else showText">
                 <div class="flex justify-center flex-row gap-2">
                   <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.7s]"></div>
