--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,65 +1,73 @@
 <section>
-    <div class="relative flex flex-col items-center justify-center px-6 py-9 mx-auto md:h-screen lg:py-0 mt-25 lg:mt-0">
 
-      <div class="w-full rounded-lg bg-white shadow py-4  md:mt-0 sm:max-w-md xl:p-0 border border-gray-300">
-        <div class="p-6 space-y-2 md:space-y-4 sm:p-8">
-          <h1 class="text-2xl text-center font-bold leading-tight tracking-tight md:text-2xl text-black mb-[4rem]">
-            INICIO SESIÓN
-          </h1>
-          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-4 md:space-y-6">
-            <!-- EMAIL -->
-            <div class="inputGroup">
-              <input type="email" name="email" formControlName="email" id="email" required>
-              <label for="email">Correo Electrónico</label>
-            </div>
-            <!-- PASSWORD -->
-            <div class="inputGroup">
-              <input type="password" name="password" formControlName="password" id="password" required>
-              <label for="password">Contraseña</label>
-            </div>
 
-            <div class="flex items-center justify-between">
-              <a href="#" class="text-sm font-medium text-blue-400 hover:underline ">¿Olvidaste tu contraseña?</a>
-            </div>
+  <div class="relative flex flex-col items-center justify-center px-6 py-9 mx-auto md:h-screen lg:py-0 mt-25 lg:mt-0">
 
-            <button type="submit" [disabled]="isSubmitting" class="shadow__btn w-full text-black font-medium rounded-lg text-sm px-5 py-2.5 text-center">
-              <div *ngIf="isSubmitting; else showText">
-                <div class="flex justify-center flex-row gap-2">
-                  <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.7s]"></div>
-                  <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.3s]"></div>
-                  <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.7s]"></div>
-                </div>
+    <div class="w-full rounded-lg bg-white shadow py-4  md:mt-0 sm:max-w-md xl:p-0 border border-gray-300">
+      <div class="p-6 space-y-2 md:space-y-4 sm:p-8">
+        <h1 class="text-2xl text-center font-bold leading-tight tracking-tight md:text-2xl text-black mb-[4rem]">
+          INICIO SESIÓN
+        </h1>
+        @if (errorMessage) {
+        <div class="mt-3 text-red-600 font-medium">
+        </div>
+        {{ errorMessage }}
+        }
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-4 md:space-y-6">
+          <!-- EMAIL -->
+          <div class="inputGroup">
+            <input type="email" name="email" formControlName="email" id="email" required>
+            <label for="email">Correo Electrónico</label>
+          </div>
+          <!-- PASSWORD -->
+          <div class="inputGroup">
+            <input type="password" name="password" formControlName="password" id="password" required>
+            <label for="password">Contraseña</label>
+          </div>
+
+          <div class="flex items-center justify-between">
+            <a routerLink="/reset-password" class="text-sm font-medium text-blue-400 hover:underline ">¿Olvidaste tu contraseña?</a>
+          </div>
+
+          <button type="submit" [disabled]="isSubmitting"
+            class="shadow__btn w-full text-black font-medium rounded-lg text-sm px-5 py-2.5 text-center">
+            <div *ngIf="isSubmitting; else showText">
+              <div class="flex justify-center flex-row gap-2">
+                <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.7s]"></div>
+                <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.3s]"></div>
+                <div class="w-2 h-2 rounded-full bg-white animate-bounce [animation-delay:.7s]"></div>
               </div>
-              <ng-template #showText>
-                Iniciar Sesión
-              </ng-template>
-            </button>
-
-          </form>
-
-          <button type="submit" (click)="loginWithGoogle()"
-            class="shadow__btn__alt w-full flex justify-center items-center font-bold text-gray-800 rounded-lg text-sm px-5 py-2.5 text-center gap-2">
-            <svg class="w-4" viewBox="0 0 533.5 544.3">
-              <path
-                d="M533.5 278.4c0-18.5-1.5-37.1-4.7-55.3H272.1v104.8h147c-6.1 33.8-25.7 63.7-54.4 82.7v68h87.7c51.5-47.4 81.1-117.4 81.1-200.2z"
-                fill="#4285f4" />
-              <path
-                d="M272.1 544.3c73.4 0 135.3-24.1 180.4-65.7l-87.7-68c-24.4 16.6-55.9 26-92.6 26-71 0-131.2-47.9-152.8-112.3H28.9v70.1c46.2 91.9 140.3 149.9 243.2 149.9z"
-                fill="#34a853" />
-              <path d="M119.3 324.3c-11.4-33.8-11.4-70.4 0-104.2V150H28.9c-38.6 76.9-38.6 167.5 0 244.4l90.4-70.1z"
-                fill="#fbbc04" />
-              <path
-                d="M272.1 107.7c38.8-.6 76.3 14 104.4 40.8l77.7-77.7C405 24.6 339.7-.8 272.1 0 169.2 0 75.1 58 28.9 150l90.4 70.1c21.5-64.5 81.8-112.4 152.8-112.4z"
-                fill="#ea4335" />
-            </svg>
-            Iniciar Con Google
+            </div>
+            <ng-template #showText>
+              Iniciar Sesión
+            </ng-template>
           </button>
 
-          <p class="text-sm font-light text-blue-300">
-            No tienes una cuenta? <a routerLink="/register" class="font-medium text-blue-400 hover:underline">Regístrate aquí</a>
-          </p>
+        </form>
 
-        </div>
+        <button type="submit" (click)="loginWithGoogle()"
+          class="shadow__btn__alt w-full flex justify-center items-center font-bold text-gray-800 rounded-lg text-sm px-5 py-2.5 text-center gap-2">
+          <svg class="w-4" viewBox="0 0 533.5 544.3">
+            <path
+              d="M533.5 278.4c0-18.5-1.5-37.1-4.7-55.3H272.1v104.8h147c-6.1 33.8-25.7 63.7-54.4 82.7v68h87.7c51.5-47.4 81.1-117.4 81.1-200.2z"
+              fill="#4285f4" />
+            <path
+              d="M272.1 544.3c73.4 0 135.3-24.1 180.4-65.7l-87.7-68c-24.4 16.6-55.9 26-92.6 26-71 0-131.2-47.9-152.8-112.3H28.9v70.1c46.2 91.9 140.3 149.9 243.2 149.9z"
+              fill="#34a853" />
+            <path d="M119.3 324.3c-11.4-33.8-11.4-70.4 0-104.2V150H28.9c-38.6 76.9-38.6 167.5 0 244.4l90.4-70.1z"
+              fill="#fbbc04" />
+            <path
+              d="M272.1 107.7c38.8-.6 76.3 14 104.4 40.8l77.7-77.7C405 24.6 339.7-.8 272.1 0 169.2 0 75.1 58 28.9 150l90.4 70.1c21.5-64.5 81.8-112.4 152.8-112.4z"
+              fill="#ea4335" />
+          </svg>
+          Iniciar Con Google
+        </button>
+
+        <p class="text-sm font-light text-blue-300">
+          No tienes una cuenta? <a routerLink="/register" class="font-medium text-blue-400 hover:underline">Regístrate
+            aquí</a>
+        </p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
