Diseño y metodos para la gestion de usuarios

--- a/src/app/features/auth/register/register.component.css
+++ b/src/app/features/auth/register/register.component.css
@@ -87,3 +87,8 @@
 .inputGroup :is(input:focus, input:valid) {
   border-color: #4378d9;
 }
+
+/* estilo para cuando se usa el autocompletado */
+.inputGroup input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px #ffffff inset !important;
+}
