--- a/src/app/features/admin/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/features/admin/gestion-usuarios/gestion-usuarios.component.html
@@ -1,1 +1,191 @@
-<p>gestion-usuarios works!</p>
+<!-- Table Section -->
+<div class="max-w-[85rem] px-4 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+  <div class="flex flex-col">
+    <div class="-m-1.5 overflow-x-auto">
+      <div class="p-1.5 min-w-full inline-block align-middle">
+        <div class="bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-xl shadow-2xs overflow-hidden">
+          <!-- Header -->
+          <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-end border-b border-gray-200 dark:border-gray-700">
+
+            <div class="flex-grow">
+              <h2 class="text-xl font-semibold text-gray-800 dark:text-gray-200">Usuarios</h2>
+              <p class="text-sm text-gray-600 dark:text-gray-400">Administra los usuarios, edita, elimina y más.</p>
+
+              <div class="mt-2 sm:w-80">
+                <label for="user-search-input" class="sr-only">Buscar</label>
+                <div class="relative">
+                  <input type="text" id="user-search-input"
+                    class="py-2 px-3 ps-11 block w-full bg-white dark:bg-gray-800 border border-gray-300 dark:border-gray-600 rounded-lg text-sm text-gray-800 dark:text-gray-300 focus:border-blue-500 focus:ring-blue-500 dark:focus:ring-blue-500"
+                    placeholder="Buscar por nombre, email..." (input)="onBusquedaChange($event)">
+                  <div class="absolute inset-y-0 start-0 flex items-center pointer-events-none ps-4">
+                    <svg class="size-4 text-gray-400 dark:text-gray-500" viewBox="0 0 16 16" fill="currentColor">
+                      <path
+                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+
+          @if(isLoading()) {
+            <p class="text-center p-10 text-gray-500 dark:text-gray-400">Cargando usuarios...</p>
+            <!-- Spinner de Carga -->
+            <div class="flex items-center justify-center h-80">
+              <div class="relative">
+                <div class="relative w-32 h-32">
+                  <div
+                    class="absolute w-full h-full rounded-full border-[3px] border-gray-100/10 border-r-[#3b82f6] border-b-[#3b82f6] animate-spin"
+                    style="animation-duration: 3s;"></div>
+
+                  <div
+                    class="absolute w-full h-full rounded-full border-[3px] border-gray-100/10 border-t-[#3b82f6] animate-spin"
+                    style="animation-duration: 2s; animation-direction: reverse;"></div>
+                </div>
+
+                <div
+                  class="absolute inset-0 bg-gradient-to-tr from-[#3b82f6]/10 via-transparent to-[#3b82f6]/5 animate-pulse rounded-full blur-sm">
+                </div>
+              </div>
+            </div>
+
+          } @else {
+          <div class="overflow-x-auto">
+            <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+              <thead class="bg-gray-50 dark:bg-gray-700">
+                <tr>
+                  <th scope="col" class="px-4 py-3 text-start text-xs font-semibold uppercase text-gray-800 dark:text-gray-200">Imagen</th>
+                  <th scope="col" class="px-4 py-3 text-start text-xs font-semibold uppercase text-gray-800 dark:text-gray-200">Nombre Completo</th>
+                  <th scope="col" class="px-4 py-3 text-start text-xs font-semibold uppercase text-gray-800 dark:text-gray-200">Email</th>
+                  <th scope="col" class="hidden lg:table-cell px-4 py-3 text-start text-xs font-semibold uppercase text-gray-800 dark:text-gray-200">Teléfono</th>
+                  <th scope="col" class="px-4 py-3 text-start text-xs font-semibold uppercase text-gray-800 dark:text-gray-200">Rol</th>
+                  <th scope="col" class="px-4 py-3 text-center text-xs font-semibold uppercase text-gray-800 dark:text-gray-200">Acciones</th>
+                </tr>
+              </thead>
+              <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
+                @for (usuario of usuariosPaginados(); track usuario.uid) {
+                <tr class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700">
+
+                  <td class="align-middle">
+                    <div class="p-4">
+                      @if (usuario.perfil) {
+                      <img class="inline-block size-10 rounded-lg object-cover" [src]="usuario.perfil" [alt]="usuario.nombre + ' ' + usuario.apellido">
+                      } @else {
+                      <div class="inline-flex items-center justify-center size-10 rounded-lg bg-gray-100 dark:bg-gray-700 text-gray-500 dark:text-gray-400">
+                        <svg class="size-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                        </svg>
+                      </div>
+                      }
+                    </div>
+                  </td>
+
+                  <td class="py-4 align-top">
+                    <div class="px-4">
+                      <div class="text-sm font-medium text-gray-800 dark:text-gray-200">{{usuario.nombre}} {{usuario.apellido}}</div>
+                    </div>
+                  </td>
+
+                  <td class="py-4 align-top">
+                    <div class="px-4">
+                      <div class="text-sm text-gray-800 dark:text-gray-200 truncate">{{usuario.email}}</div>
+                    </div>
+                  </td>
+
+                  <td class="hidden lg:table-cell py-4 align-top">
+                    <div class="px-4">
+                      <span class="text-sm text-gray-500 dark:text-gray-400">{{usuario.telefono || 'N/A'}}</span>
+                    </div>
+                  </td>
+
+                  <td class="py-4 align-top">
+                    <div class="px-4">
+                      @if (usuario.rol === 'Admin') {
+                      <span class="inline-flex items-center gap-1.5 py-1 px-2 rounded-lg text-xs font-medium bg-purple-100 dark:bg-purple-900/30 text-purple-800 dark:text-purple-400">{{usuario.rol}}</span>
+                      } @else if (usuario.rol === 'RTE') {
+                      <span class="inline-flex items-center gap-1.5 py-1 px-2 rounded-lg text-xs font-medium bg-blue-100 dark:bg-blue-900/30 text-blue-800 dark:text-blue-400">{{usuario.rol}}</span>
+                      } @else {
+                      <span class="inline-flex items-center gap-1.5 py-1 px-2 rounded-lg text-xs font-medium bg-green-100 dark:bg-green-900/30 text-green-800 dark:text-green-400">{{usuario.rol}}</span>
+                      }
+                    </div>
+                  </td>
+
+                  <td class="py-4 align-top">
+                    <div class="px-6 text-center">
+                      <div class="hs-dropdown [--placement:bottom-right] relative inline-block">
+                        <button type="button" class="hs-dropdown-toggle p-1.5 inline-flex justify-center items-center gap-2 rounded-full text-gray-700 dark:text-gray-200 align-middle hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white dark:focus:ring-offset-gray-800 focus:ring-blue-600 dark:focus:ring-blue-500">
+                          <svg class="size-4" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z" />
+                          </svg>
+                        </button>
+                        <div class="hs-dropdown-menu transition-[opacity,margin] duration hs-dropdown-open:opacity-100 opacity-0 hidden divide-y divide-gray-200 dark:divide-gray-700 min-w-40 z-10 bg-white dark:bg-gray-800 shadow-2xl rounded-lg p-2 mt-2">
+                          <div class="py-2 first:pt-0 last:pb-0">
+                            <span class="block py-2 px-3 text-xs font-medium uppercase text-gray-400 dark:text-gray-500">Acciones</span>
+                            <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="19" height="19" class="text-gray-800 dark:text-gray-200" fill="none">
+                                <path d="M6.53792 2.32172C6.69664 1.89276 7.30336 1.89276 7.46208 2.32172L8.1735 4.2443C8.27331 4.51403 8.48597 4.72669 8.7557 4.8265L10.6783 5.53792C11.1072 5.69664 11.1072 6.30336 10.6783 6.46208L8.7557 7.1735C8.48597 7.27331 8.27331 7.48597 8.1735 7.7557L7.46208 9.67828C7.30336 10.1072 6.69665 10.1072 6.53792 9.67828L5.8265 7.7557C5.72669 7.48597 5.51403 7.27331 5.2443 7.1735L3.32172 6.46208C2.89276 6.30336 2.89276 5.69665 3.32172 5.53792L5.2443 4.8265C5.51403 4.72669 5.72669 4.51403 5.8265 4.2443L6.53792 2.32172Z" stroke="currentColor" stroke-width="1.5"></path>
+                                <path d="M14.4039 9.64136L15.8869 11.1244M6 22H7.49759C8.70997 22 9.31617 22 9.86124 21.7742C10.4063 21.5484 10.835 21.1198 11.6923 20.2625L19.8417 12.1131C20.3808 11.574 20.6503 11.3045 20.7944 11.0137C21.0685 10.4605 21.0685 9.81094 20.7944 9.25772C20.6503 8.96695 20.3808 8.69741 19.8417 8.15832C19.3026 7.61924 19.0331 7.3497 18.7423 7.20561C18.1891 6.93146 17.5395 6.93146 16.9863 7.20561C16.6955 7.3497 16.426 7.61924 15.8869 8.15832L7.73749 16.3077C6.8802 17.165 6.45156 17.5937 6.22578 18.1388C6 18.6838 6 19.29 6 20.5024V22Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                              </svg>
+                              Editar
+                            </a>
+                          </div>
+                          <div class="py-2 first:pt-0 last:pb-0">
+                            <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-red-600 dark:text-red-400 hover:bg-gray-100 dark:hover:bg-gray-700 cursor-pointer" (click)="eliminarUsuario(usuario.uid)">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="19" height="19" fill="none">
+                                <path d="M19.5 5.5L18.8803 15.5251C18.7219 18.0864 18.6428 19.3671 18.0008 20.2879C17.6833 20.7431 17.2747 21.1273 16.8007 21.416C15.8421 22 14.559 22 11.9927 22C9.42312 22 8.1383 22 7.17905 21.4149C6.7048 21.1257 6.296 20.7408 5.97868 20.2848C5.33688 19.3626 5.25945 18.0801 5.10461 15.5152L4.5 5.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
+                                <path d="M9 11.7349H15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
+                                <path d="M10.5 15.6543H13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
+                                <path d="M3 5.5H21M16.0555 5.5L15.3729 4.09173C14.9194 3.15626 14.6926 2.68852 14.3015 2.39681C14.2148 2.3321 14.1229 2.27454 14.0268 2.2247C13.5937 2 13.0739 2 12.0343 2C10.9686 2 10.4358 2 9.99549 2.23412C9.89791 2.28601 9.80479 2.3459 9.7171 2.41317C9.32145 2.7167 9.10044 3.20155 8.65842 4.17126L8.05273 5.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"></path>
+                              </svg>
+                              Eliminar
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </td>
+                </tr>
+                } @empty {
+                <tr>
+                  <td colspan="6" class="text-center p-10 text-gray-500 dark:text-gray-400">No se encontraron usuarios con los filtros seleccionados.</td>
+                </tr>
+                }
+              </tbody>
+            </table>
+          </div>
+          <div class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-gray-700">
+            <div>
+              <p class="text-sm text-gray-600 dark:text-gray-400">
+                <!-- Mostrando <span class="font-semibold text-gray-800 dark:text-gray-200">{{ usuariosPaginados().length }}</span> de <span class="font-semibold text-gray-800 dark:text-gray-200">{{ filteredUsers().length }}</span> resultados -->
+              </p>
+            </div>
+            <div class="flex items-center justify-center w-full text-white font-medium gap-10">
+              <button class="rounded-full border border-gray-300 cursor-pointer z-10" [disabled]="paginaActual() === 1"
+                (click)="irAPagina(paginaActual() - 1)">
+                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M22.499 12.85a.9.9 0 0 1 .57.205l.067.06a.9.9 0 0 1 .06 1.206l-.06.066-5.585 5.586-.028.027.028.027 5.585 5.587a.9.9 0 0 1 .06 1.207l-.06.066a.9.9 0 0 1-1.207.06l-.066-.06-6.25-6.25a1 1 0 0 1-.158-.212l-.038-.08a.9.9 0 0 1-.03-.606l.03-.083a1 1 0 0 1 .137-.226l.06-.066 6.25-6.25a.9.9 0 0 1 .635-.263Z"
+                    fill="currentColor" stroke="currentColor" stroke-width=".078" />
+                </svg>
+              </button>
+
+              <span>Página {{ paginaActual() }} de {{ totalPaginas() }}</span>
+
+              <button class="rounded-full border border-gray-300 cursor-pointer" [disabled]="paginaActual() === totalPaginas()"
+                (click)="irAPagina(paginaActual() + 1)">
+                <svg class="rotate-180" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M22.499 12.85a.9.9 0 0 1 .57.205l.067.06a.9.9 0 0 1 .06 1.206l-.06.066-5.585 5.586-.028.027.028.027 5.585 5.587a.9.9 0 0 1 .06 1.207l-.06.066a.9.9 0 0 1-1.207.06l-.066-.06-6.25-6.25a1 1 0 0 1-.158-.212l-.038-.08a.9.9 0 0 1-.03-.606l.03-.083a1 1 0 0 1 .137-.226l.06-.066 6.25-6.25a.9.9 0 0 1 .635-.263Z"
+                    fill="currentColor" stroke="currentColor" stroke-width=".078" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          }
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
