--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -6,6 +6,11 @@
           <h1 class="text-2xl text-center font-bold leading-tight tracking-tight md:text-2xl text-black mb-[4rem]">
             INICIO SESIÓN
           </h1>
+                  @if (errorMessage) {
+        <div class="mt-3 text-red-600 font-medium">
+        </div>
+        {{ errorMessage }}
+        }
           <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-4 md:space-y-6">
             <!-- EMAIL -->
             <div class="inputGroup">
@@ -19,7 +24,7 @@
             </div>
 
             <div class="flex items-center justify-between">
-              <a href="#" class="text-sm font-medium text-blue-400 hover:underline ">¿Olvidaste tu contraseña?</a>
+              <a routerLink="/reset-password" class="text-sm font-medium text-blue-400 hover:underline ">¿Olvidaste tu contraseña?</a>
             </div>
 
             <button type="submit" [disabled]="loginForm.invalid" class="shadow__btn w-full text-black font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-50 disabled:cursor-not-allowed">
