--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -54,6 +54,7 @@
               <!-- Mega Menu -->
               <div
                 class="hs-dropdown [--strategy:static] md:[--strategy:absolute] [--adaptive:none] [--is-collapse:true] md:[--is-collapse:false] ">
+                @if(currentUser()?.rol === 'Admin'){
                 <button id="hs-header-base-mega-menu-fullwidth" type="button"
                   class="hs-dropdown-toggle w-full p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
                   aria-haspopup="menu" aria-expanded="false" aria-label="Mega Menu">
@@ -72,7 +73,7 @@
                     <path d="m6 9 6 6 6-6" />
                   </svg>
                 </button>
-
+                }
                 <div
                   class="hs-dropdown-menu transition-[opacity,margin] duration-[0.1ms] md:duration-[150ms] hs-dropdown-open:opacity-100 opacity-0 relative w-full min-w-60 hidden z-10 top-full start-0 before:absolute before:-top-5 before:start-0 before:w-full before:h-5"
                   role="menu" aria-orientation="vertical" aria-labelledby="hs-header-base-mega-menu-fullwidth">
@@ -117,8 +118,8 @@
                         <!-- End Link -->
 
                         <!-- Link -->
-                        <a class="p-3 flex gap-x-4 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 rounded-lg dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-                          href="#">
+                        <a routerLink="/gestion-escuelas" class="p-3 flex gap-x-4 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 rounded-lg dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                          >
                           <svg class="shrink-0 size-4 mt-1 text-gray-800 dark:text-neutral-200"
                             xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -127,9 +128,8 @@
                             <rect width="18" height="18" x="3" y="3" rx="2" ry="2" />
                           </svg>
                           <div class="grow">
-                            <p class="font-medium text-sm text-gray-800 dark:text-neutral-200">API Reference</p>
-                            <p class="text-sm text-gray-500 dark:text-neutral-500">Build custom integrations with our
-                              first-class API.</p>
+                            <p class="font-medium text-sm text-gray-800 dark:text-neutral-200">Gestión Escuelas</p>
+                            <p class="text-sm text-gray-500 dark:text-neutral-500">Administración de las Escuelas</p>
                           </div>
                         </a>
                         <!-- End Link -->
@@ -256,7 +256,7 @@
                 </svg>
                 Blog
               </a> -->
-            
+
                           <!-- Inicio Botón Modo Oscuro -->
               <div
                 class="flex flex-col gap-y-3 sm:gap-y-0 mt-5 sm:flex-row sm:items-center sm:justify-end sm:mt-0 sm:ps-5">
