--- a/src/app/features/admin/edit-usuario/edit-usuario.component.html
+++ b/src/app/features/admin/edit-usuario/edit-usuario.component.html
@@ -105,6 +105,7 @@
                       <option value="Director">Director</option>
                       <option value="RTE">RTE</option>
                       <option value="Docente">Docente</option>
+                      <option value="Empleado">Empleado</option>
                     </select>
                 </div>
 
