--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -38,21 +38,19 @@
         class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
         <div class="py-2 md:py-0  flex flex-col md:flex-row md:items-center gap-0.5 md:gap-1">
           <div class="grow">
-            <div class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1">
+            <div class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1 py-1">
+              @if(currentUser()?.rol === 'Empleado'){
               <a routerLink="/mis-tareas"
                 class="relative p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700">
-                <!-- Icono original de Mis Tareas -->
-
-
-                <!-- Texto "Mis Tareas" -->
                 <span class="hidden md:block">Mis Tareas</span>
-
-                <!-- Contador de notificaciones -->
+                @if (totalTareasPendientes() > 0) {
                 <span
-                  class="absolute top-0 end-0 inline-flex items-center py-0.5 px-1.5 rounded-full text-xs font-medium transform -translate-y-1/2 translate-x-1/2 bg-red-500 text-white">
-                  99+
+                  class="absolute end-0 inline-flex items-center py-0.5 px-1.5 rounded-full text-xs font-medium transform -translate-y-1/2 translate-x-1/2 bg-red-500 text-white">
+                  {{ totalTareasPendientes() }}
                 </span>
+                }
               </a>
+              }
 
               <!-- Mega Menu -->
               <div
