--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="grid min-h-[100dvh] grid-rows-[auto_auto_1fr_auto]">
-    <app-navbar />
-    <router-outlet />
-    <app-footer />
-</div>
+<router-outlet></router-outlet>
