--- a/src/app/features/admin/edit-usuario/edit-usuario.component.html
+++ b/src/app/features/admin/edit-usuario/edit-usuario.component.html
@@ -114,7 +114,7 @@
             <!-- End Grid -->
 
             <div class="mt-5 flex justify-end gap-x-2">
-                <button type="button" [disabled]="isSubmitting"
+                <button routerLink="/administracion/gestion-usuarios" type="button" [disabled]="isSubmitting"
                     class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-hidden focus:bg-gray-50">
                     Cancelar
                 </button>
