--- a/src/app/features/tasks/gestion-tareas/gestion-tareas.component.html
+++ b/src/app/features/tasks/gestion-tareas/gestion-tareas.component.html
@@ -63,7 +63,7 @@
                 <option value="Finalizada">Finalizada</option>
               </select>
 
-              <a routerLink="/edicion-tarea"
+              <a routerLink="form-tarea"
                 class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700">
                 Crear Tarea
               </a>
@@ -204,7 +204,7 @@
                           <span
                             class="block py-2 px-3 text-xs font-medium uppercase text-gray-400 dark:text-gray-500">Acciones</span>
                           <a class="flex items-center gap-x-3 py-2 px-3 rounded-lg text-sm text-gray-800 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-700"
-                            [routerLink]="['/edicion-tarea', tarea.id]">
+                            [routerLink]="['form-tarea', tarea.id]">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="19" height="19"
                               fill="none">
                               <path
